--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,81 @@
+* {
+    cursor: default;
+}
+
 body {
-    background: #080808;
+    color: #f8f8f8;
+    background: #323232;
 }
 
 .blackbg {
-    background: #000000;
+    background: #000;
 }
 
-.text-white {
-    color: #E8E8E8;
+input, .form-control, .input-group-addon, .btn, .btn-xs, .btn-group-xs>.btn {
+    border-radius: 0px;
+}
+
+.row.search {
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.row.search .col-sm-3, .row.search  .col-md-3, .row.search  .col-lg-3 {
+    padding-right: 0px;
+}
+
+@media screen and (min-width:768px){
+    .navbar-brand-centered {
+        position: absolute;
+        left: 50%;
+        display: block;
+        width: 160px;
+        text-align: center;
+    }
+    .navbar>.container .navbar-brand-centered,
+    .navbar>.container-fluid .navbar-brand-centered {
+        margin-left: -80px;
+    }
+}
+
+.navbar {
+    background: #000;
+}
+
+.nav >a, .nav>li>a, .nav >a, .nav >a{
+    color: #f8f8f8;
+}
+
+.nav .open>a, .nav>li>a:hover, .nav .open>a:hover, .nav .open>a:focus,
+.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus{
+    background: #000;
+    color: #FFF;
+    border-radius: 0px;
+}
+
+.tab-pane {
+    overflow-y: auto;
+}
+
+.with-nav-tabs .nav-pills>li.active>a, .with-nav-tabs .nav>li>a:hover {
+    background: #323232 !important;
+    border-radius: 0px;
+}
+
+.with-nav-tabs .nav>li>a {
+    background: #000;
+    border-radius: 0px;
+}
+
+.tab-content svg {
+    padding: 5px;
+    padding-left: 7px;
+}
+
+.tab-content svg:hover {
+    background: #000;
+}
+
+.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th{
+    background: #000;
 }
